sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:6: error: not found: value mem_i
    mem_i = getValue(i);
    ^AlgSelectionSort:7: error: not found: value min_indice
    min_indice = i
    ^AlgSelectionSort:9: error: not found: value mem_i
      if(isSmallerThan(j, mem_i)){
                          ^AlgSelectionSort:10: error: not found: value min_indice
        min_indice = j;
        ^AlgSelectionSort:13: error: not found: value j
    swap(i,j);
           ^